objects/USA_Survey_Question_Layout__c.object
<CustomObject>
    <fields>
        <fullName>USA_Briefcase_Survey_Question__c</fullName>
        <label>Briefcase Survey Question</label>
        <referenceTo>USA_Survey_Question__c</referenceTo>
        <relationshipLabel>Question Layouts</relationshipLabel>
        <relationshipName>USA_Survey_Question_Layouts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>USA_Multi_Column_QuestionTODELETE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi Column Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Multi_Column_Question__c</fullName>
        <formula>USA_Number_of_Columns_in_Row__c &gt; 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi Column Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Number_of_Columns_in_Row__c</fullName>
        <label>Number of Columns in Row</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Show_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Show_Label__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Start_Position_Column__c</fullName>
        <label>Start Position Column</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Start_Position_Row__c</fullName>
        <label>Start Position Row</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>USA_Survey__c</referenceTo>
        <relationshipLabel>Question Layout</relationshipLabel>
        <relationshipName>USA_Survey_Question_Layouts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Question Layout</label>
    <listViews>
        <fullName>All_Question_Layouts</fullName>
        <columns>NAME</columns>
        <columns>USA_Start_Position_Row__c</columns>
        <columns>USA_Start_Position_Column__c</columns>
        <columns>USA_Briefcase_Survey_Question__c</columns>
        <columns>USA_Survey__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Question Layouts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Layout</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>